Fixed Font, and badge position
-Font is changed to bubblegum sans and correct 32px size
- badge is placed on the bottom right but sticking out a bit.

--- a/ct1-level2.css
+++ b/ct1-level2.css
@@ -1,29 +1,31 @@
+@import url('https://fonts.googleapis.com/css2?family=Bubblegum+Sans&display=swap');
+
 .batmanContainer,
 .wonderwomanContainer,
 .robinContainer,
 .supermanContainer {
     position: relative;
     width: fit-content;
-    margin-bottom: 15px;
+    margin-bottom: 50px;
 }
 
 .badgeImg {
     position: absolute;
-    bottom: 10px;
-    right: 5px;
+    top: 310px;
+    left: 515px;
 }
 
 .caption {
     background: rgba(60, 65, 104, 0.67);
     color: #ffffff;
-    font-family: Arial, sans-serif;
-    font-size: 20px;
+    font-family: 'Bubblegum Sans', sans-serif;
+    font-size: 32px;
     position: absolute;
-    bottom: 0;
+    bottom: 4px;
     left: 0;
     width: 100%;
     box-sizing: border-box;
-    padding: 30px 15px;
+    padding: 20px 15px;
 }
 
 .heroImg {
